# ml-zoomcamp-homework

./: .gitignore  README.md  pyproject.toml
credit-card-fraud-detection/: README.md
credit-card-fraud-detection/notebooks/: 01-eda-and-baseline.ipynb
supplements/: Sklearn.ipynb  evaluation.ipynb  numpy-review.ipynb  pandas_review.ipynb  pima_indians_diabets.ipynb  sklearn_titanic.ipynb
week1/: homework1.ipynb  intro-to-numpy.ipynb  intro-to-pandas.ipynb  linear_algbra.ipynb
week2/: carprice.ipynb  carprice_copy.ipynb  code_explanation.md  homework2.ipynb
week3/: churn.ipynb  homework3.ipynb
week4/: homework4.ipynb  notebook.ipynb
week5/: 05-train-churn-model.ipynb  Dockerfile  predict.py
week5-homework/: Dockerfile  main.py  pyproject.toml  test.py
week6/: week6_homework.ipynb  week6_notebook.ipynb
week8/: week8_homework.ipynb
